<resources>
    <string name="app_name">联家</string>
    <string name="my_picture">picture</string>

    <string name="community_profile">小区简介</string>
    <string name="community_activity">社区活动</string>
    <string name="my_question">我要报事</string>
    <string name="event_list">报事列表</string>
    <string name="property_file">物业档案</string>
    <string name="message">消息</string>
    <string name="life_information">生活资讯</string>
    <string name="property_dynamic">物业动态</string>
    <string name="property_notification">物业通知</string>
    <string name="cost_of_property">物业费用</string>
    <string name="detail_pay">费用详情</string>
    <string name="service_tel">客服电话</string>
    <string name="question_survey">问卷调查</string>
    <string name="message_notification">消息通知</string>
    <string name="title_activity_my_matter">MyMatterActivity</string>
    <string name="detail">详情</string>

    <string name="self_notify">我是有底线的</string>
    <string name="current_location">事件位置</string>
    <string name="content_description">内容描述</string>
    <string name="input_tips">请输入需要报事的内容描述</string>
    <string name="check_commit">确认提交</string>
    <string name="history_current">历史报事</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_open">OpenActivity</string>
    <string name="my_self">我的</string>
    <string name="report_loss">挂失解挂</string>
    <string name="more">更多</string>
    <string name="face_manager">人脸管理</string>
    <string name="open_record">开门记录</string>
    <string name="define_name">名称自定义</string>
    <string name="magnetic_application">磁卡申请</string>
    <string name="magnetic_distribute">磁卡分配</string>
    <string name="operation_instruction">互联网门禁使用说明</string>
    <string name="face_manager_tips">温馨提醒：人脸头像用于人脸识别开门，需要门口机支持该功能，若该小区未启用此功能，则无需上传。</string>
    <string name="face_status_null">未上传人脸</string>
    <string name="face_status_ok">已上传人脸</string>
    <string name="recording_face">人脸录入</string>
    <string name="input_telephone_number">请输入手机号码</string>
    <string name="input_password">输入密码</string>
    <string name="password_contain">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="change_world">科技改变生活</string>
    <string name="get_verification_code">点击获取验证码</string>
    <string name="next">下一步</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="forget_pw">忘记密码</string>
    <string name="set_pw">设置密码</string>
    <string name="input_set_tips">请输入6~16位数字或字母</string>
    <string name="input_again">请再次输入6~16位数字或字母</string>
    <string name="sure">确定</string>
    <string name="temp_name">张三</string>
    <string name="type_host">业主</string>
    <string name="type_custom">住户</string>
    <string name="temp_location">海湾国际小区16栋6单元307号</string>
    <string name="modify_pw">修改密码</string>
    <string name="about_us">关于我们</string>
    <string name="my_profile">我的资料</string>
    <string name="sign_out">退出登录</string>
    <string name="save_it">保存</string>
    <string name="trace_recording">出入记录</string>
    <string name="upload_photo">立即上传</string>
    <string name="fm_location">海港豪庭18栋1103</string>
    <string name="fm_pass">已通过</string>
    <string name="upload_repeat">重新上传</string>
    <string name="fm_tips">正在审核中，请耐心等待</string>
    <string name="fm_uploaded">已上传人脸照片</string>
    <string name="fm_fail_reason">驳回原因：</string>
    <string name="cancel">取消</string>
    <string name="unsettled">未处理</string>
    <string name="settled">已完成</string>
    <string name="my_notify">通知告知</string>
    <string name="first_notification">物业管理费已经出来了，可以进行缴费了</string>
    <string name="access_card">门禁</string>
    <string name="home_location">港湾海岸13栋1003</string>
    <string name="loading">加载中…</string>
    <string name="unpaid_total">未缴金额合计</string>
    <string name="accountBalance">预存款余额</string>
    <string name="check_detail">查看详情</string>
    <string name="immediate_experience">立即体验</string>
    <string name="description_info">“联家“是深圳市亚联训网络通讯有限公司旗下主打的社区综合服务平台，为广大用户提供物业信息、房屋装修、周边商家信息、智能家居控制、健康体检、预约挂号等服务。\n\n我们的APP只为小区住户服务,对象专一、服务周到，为您的生活、家居、安全、健康都带来了更高的保障，让社区与家庭更和谐，生活更便捷。</string>
    <string name="app_version">V1.0.0</string>
    <string name="history_events">历史报事</string>
    <string name="commit">确认提交</string>
    <string name="service_type">请选择服务类别</string>
    <string name="family_maintain">家庭维修</string>
    <string name="guarantee">公区保修</string>
    <string name="advice">投诉建议</string>
    <string name="zero">0</string>
    <string name="limit_num">/200</string>
    <string name="input_report_content">请填写报事内容</string>
    <string name="report_photos">图片信息</string>
    <string name="emergency_notice">紧急通知</string>
    <string name="unread">未阅读</string>
    <string name="read">已阅读</string>
    <string name="open_door_shortcut">一键开门</string>
    <string name="mod_door_name_tips">请输入名称(10字以内)</string>
    <string name="first_page">首页</string>
    <string name="user_protocol">《联家用户协议》</string>
    <string name="modify_name">修改名称</string>
    <string name="agree_mod">确定要修改吗？</string>
    <string name="close">关闭</string>

</resources>
