<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/back_bar"/>
    <LinearLayout
        android:id="@+id/fm_manager_show"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bolder"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/fm_location"
                android:layout_weight="1"
                android:text="@string/fm_location"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/fm_status"
                android:textColor="#00CC66"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"
                android:text="@string/fm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/upload_status"
            android:text="@string/fm_uploaded"
            android:textColor="@color/themeColor"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/fm_picture"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:contentDescription="@string/my_picture"
            android:layout_width="330dp"
            android:layout_height="180dp"/>
        <LinearLayout
            android:id="@+id/fm_show_reason"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/darkGray"
                android:textSize="14sp"
                android:text="@string/fm_fail_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/fm_reason"
                android:layout_marginTop="8dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/darkGray"
                android:textSize="14sp"
                android:text="@string/fm_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fm_show_tips"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="20dp">
            <TextView
                android:layout_gravity="center"
                android:textColor="@color/darkGray"
                android:textSize="14sp"
                android:text="@string/fm_tips"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fm_show_button"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:onClick="uploadPhoto"
                android:background="@drawable/blue_button"
                android:layout_gravity="center"
                android:textColor="@color/app_color_f6"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/upload_repeat"
                android:layout_width="156dp"
                android:layout_height="match_parent"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/face_manager_default"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="200dp"
            android:contentDescription="@string/my_picture"
            android:layout_gravity="center"
            android:src="@drawable/face_default"
            android:layout_width="218dp"
            android:layout_height="194dp"/>
        <LinearLayout
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:onClick="choosePicture"
                android:background="@drawable/blue_button"
                android:layout_gravity="center"
                android:textColor="@color/app_color_f6"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/upload_photo"
                android:layout_width="200dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
