<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@drawable/background_head"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <FrameLayout
        android:layout_marginTop="12dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:ignore="UselessParent">

        <View
            android:background="@drawable/bolder"
            android:layout_marginTop="90dp"
            android:layout_width="match_parent"
            android:layout_height="290dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:contentDescription="@string/my_picture"
                android:src="@drawable/login_img"
                android:scaleType="centerCrop"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="160dp"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageView
                    android:contentDescription="@string/my_picture"
                    android:src="@drawable/login_head"
                    android:layout_marginStart="22dp"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"/>
                <EditText
                    android:id="@+id/login_telephone_et"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="14dp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_telephone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no" />
            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:background="@color/black_color"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageView
                    android:contentDescription="@string/my_picture"
                    android:src="@drawable/login_lock"
                    android:layout_marginStart="22dp"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"/>
                <EditText
                    android:id="@+id/login_password_et"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="14dp"
                    android:inputType="textPassword"
                    android:digits="@string/password_contain"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no" />
            </LinearLayout>
            <View
                android:layout_marginTop="10dp"
                android:background="@color/black_color"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:onClick="forgetPassword"
                android:gravity="end"
                android:textColor="@color/themeColor"
                android:text="@string/forget_password"
                android:layout_marginStart="150dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:onClick="goHome"
                android:background="@drawable/blue_button"
                android:layout_width="match_parent"
                android:text="@string/login"
                android:textColor="@color/app_color_f6"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="40dp"
                android:layout_height="40dp"/>
        </LinearLayout>
    </FrameLayout>
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="46dp">
        <TextView
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/themeColor"
            android:gravity="end"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <View
            android:background="@color/themeColor"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="3dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/themeColor"
            android:gravity="start"
            android:text="@string/change_world"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
