<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drag_fl"
    android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="0"
                android:background="@color/themeColor"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                tools:ignore="UselessLeaf,UselessParent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/head"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/welcome1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    />
                <TextView
                    android:id="@+id/user_name"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/temp_name"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/user_location"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:text="@string/temp_location"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bolder"
        android:layout_marginTop="286dp"
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:onClick="modifyPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginStart="25dp"
                android:textColor="@color/black_color"
                android:text="@string/modify_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/right_arrow_def"
                android:contentDescription="@string/my_picture"
                android:layout_width="20dp"
                android:layout_marginEnd="28dp"
                android:layout_height="20dp"/>
        </LinearLayout>
        <View
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/darkGray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:onClick="showMyProfile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginStart="25dp"
                android:textColor="@color/black_color"
                android:text="@string/my_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/right_arrow_def"
                android:contentDescription="@string/my_picture"
                android:layout_width="20dp"
                android:layout_marginEnd="28dp"
                android:layout_height="20dp"/>
        </LinearLayout>
        <View
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/darkGray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:onClick="aboutUs"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginStart="25dp"
                android:textColor="@color/black_color"
                android:text="@string/about_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/right_arrow_def"
                android:contentDescription="@string/my_picture"
                android:layout_width="20dp"
                android:layout_marginEnd="28dp"
                android:layout_height="20dp"/>
        </LinearLayout>
        <View
            android:layout_marginTop="7dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/darkGray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="520dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp">
            <TextView
                android:onClick="exit"
                android:background="@drawable/blue_button"
                android:layout_gravity="center"
                android:textColor="@color/app_color_f6"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/sign_out"
                android:layout_width="156dp"
                android:layout_height="match_parent"/>
    </LinearLayout>
</FrameLayout>
