<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/back_bar"/>
    <View
        android:layout_marginTop="10dp"
        android:background="@color/darkGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <TextView
            android:text="旧密码"
            android:textSize="16sp"
            android:textColor="@color/black_color"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/old_pw"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:digits="@string/password_contain"
            android:maxLength="16"
            android:background="@android:color/transparent"
            android:hint="请输入旧密码"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

    </LinearLayout>
    <View
        android:layout_marginTop="1dp"
        android:background="@color/darkGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <View
        android:layout_marginTop="10dp"
        android:background="@color/darkGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <TextView
            android:text="新密码"
            android:textSize="16sp"
            android:textColor="@color/black_color"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/new_pw"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:digits="@string/password_contain"
            android:maxLength="16"
            android:background="@android:color/transparent"
            android:hint="@string/input_set_tips"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />
        <ImageView
            android:onClick="hidePassword"
            android:src="@drawable/pw_hide"
            android:layout_gravity="center"
            android:contentDescription="@string/my_picture"
            android:layout_marginEnd="20dp"
            android:layout_width="20dp"
            android:layout_height="20dp"/>

    </LinearLayout>
    <View
        android:layout_marginTop="1dp"
        android:background="@color/darkGray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <TextView
            android:onClick="sure"
            android:background="@drawable/blue_button"
            android:layout_gravity="center"
            android:textColor="@color/app_color_f6"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/sure"
            android:layout_width="220dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
