<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drag_open_l"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/themeColor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="115dp">
        <LinearLayout
            android:onClick="faceManager"
            android:layout_marginTop="36dp"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="80dp"
            tools:ignore="UseCompoundDrawables">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="10dp"
                android:src="@drawable/face_manager"
                android:layout_gravity="center"
                android:contentDescription="@string/my_picture"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:layout_marginTop="6dp"
                android:textSize="16sp"
                android:text="@string/face_manager"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </LinearLayout>
        <LinearLayout
            android:onClick="tripRecord"
            android:layout_marginTop="36dp"
            android:layout_marginStart="40dp"
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="80dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_marginTop="10dp"
                android:src="@drawable/record_trace"
                android:layout_gravity="center"
                android:contentDescription="@string/my_picture"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:layout_marginTop="6dp"
                android:textSize="16sp"
                android:text="@string/trace_recording"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <GridView
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/door_gv"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="16dp"
        android:verticalSpacing="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
